<resources>
    <string name="app_name">Inclass09</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="email_hint">Enter Email</string>
    <string name="password_hint">Enter Password</string>
    <string name="logout">Logout</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="email">Email:</string>
    <string name="phone">Phone:</string>
    <string name="phone_type">PhoneType:</string>
    <string name="delete">Delete</string>
    <string name="add_contact">Add Contact</string>
    <string name="name">Name:</string>
    <string name="name_hint">Please Enter Name</string>
    <string name="phone_hint">Enter Phone Number</string>
    <string name="phone_type_hint">Enter Phone Type</string>
    <string name="contact_created">Contact Created</string>
    <string name="error">Error !!!!</string>
    <string name="success">Success !!!!</string>

</resources>